infra/modules/networking/bastion.tf
resource "azurerm_subnet" "bastion" {
  name                 = "AzureBastionSubnet"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.this.name
  address_prefixes     = var.bastion_subnet_prefix
}

resource "azurerm_network_security_group" "bastion" {
  name                = "nsg-bastion-${var.prefix}"
  location            = var.location
  resource_group_name = var.resource_group_name
  tags                = var.tags
}

resource "azurerm_network_security_rule" "bastion_allow_https_inbound" {
  name                         = "AllowHttpsInbound"
  priority                     = 100
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Tcp"
  source_port_range            = "*"
  destination_port_range       = "443"
  source_address_prefix        = "Internet"
  destination_address_prefix   = "*"
  resource_group_name          = var.resource_group_name
  network_security_group_name  = azurerm_network_security_group.bastion.name
}

resource "azurerm_network_security_rule" "bastion_allow_gateway_manager_inbound" {
  name                         = "AllowGatewayManagerInbound"
  priority                     = 110
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Tcp"
  source_port_range            = "*"
  destination_port_range       = "443"
  source_address_prefix        = "GatewayManager"
  destination_address_prefix   = "*"
  resource_group_name          = var.resource_group_name
  network_security_group_name  = azurerm_network_security_group.bastion.name
}

resource "azurerm_network_security_rule" "bastion_allow_lb_inbound" {
  name                         = "AllowAzureLoadBalancerInbound"
  priority                     = 120
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "Tcp"
  source_port_range            = "*"
  destination_port_range       = "443"
  source_address_prefix        = "AzureLoadBalancer"
  destination_address_prefix   = "*"
  resource_group_name          = var.resource_group_name
  network_security_group_name  = azurerm_network_security_group.bastion.name
}

resource "azurerm_network_security_rule" "bastion_allow_host_comm_inbound" {
  name                         = "AllowBastionHostCommunication"
  priority                     = 130
  direction                    = "Inbound"
  access                       = "Allow"
  protocol                     = "*"
  source_port_range            = "*"
  destination_port_ranges      = ["8080", "5701"]
  source_address_prefix        = "VirtualNetwork"
  destination_address_prefix   = "VirtualNetwork"
  resource_group_name          = var.resource_group_name
  network_security_group_name  = azurerm_network_security_group.bastion.name
}

resource "azurerm_network_security_rule" "bastion_allow_ssh_rdp_outbound" {
  name                         = "AllowSshRdpOutbound"
  priority                     = 100
  direction                    = "Outbound"
  access                       = "Allow"
  protocol                     = "*"
  source_port_range            = "*"
  destination_port_ranges      = ["22", "3389"]
  source_address_prefix        = "*"
  destination_address_prefix   = "VirtualNetwork"
  resource_group_name          = var.resource_group_name
  network_security_group_name  = azurerm_network_security_group.bastion.name
}

resource "azurerm_network_security_rule" "bastion_allow_azure_cloud_outbound" {
  name                         = "AllowAzureCloudOutbound"
  priority                     = 110
  direction                    = "Outbound"
  access                       = "Allow"
  protocol                     = "Tcp"
  source_port_range            = "*"
  destination_port_range       = "443"
  source_address_prefix        = "*"
  destination_address_prefix   = "AzureCloud"
  resource_group_name          = var.resource_group_name
  network_security_group_name  = azurerm_network_security_group.bastion.name
}

resource "azurerm_network_security_rule" "bastion_allow_host_comm_outbound" {
  name                         = "AllowBastionCommunication"
  priority                     = 120
  direction                    = "Outbound"
  access                       = "Allow"
  protocol                     = "*"
  source_port_range            = "*"
  destination_port_ranges      = ["8080", "5701"]
  source_address_prefix        = "VirtualNetwork"
  destination_address_prefix   = "VirtualNetwork"
  resource_group_name          = var.resource_group_name
  network_security_group_name  = azurerm_network_security_group.bastion.name
}

resource "azurerm_network_security_rule" "bastion_allow_http_outbound" {
  name                         = "AllowHttpOutbound"
  priority                     = 130
  direction                    = "Outbound"
  access                       = "Allow"
  protocol                     = "*"
  source_port_range            = "*"
  destination_port_range       = "80"
  source_address_prefix        = "*"
  destination_address_prefix   = "Internet"
  resource_group_name          = var.resource_group_name
  network_security_group_name  = azurerm_network_security_group.bastion.name
}

resource "azurerm_subnet_network_security_group_association" "bastion" {
  subnet_id                 = azurerm_subnet.bastion.id
  network_security_group_id = azurerm_network_security_group.bastion.id
}

resource "azurerm_public_ip" "bastion" {
  name                = "pip-bastion-${var.prefix}"
  location            = var.location
  resource_group_name = var.resource_group_name
  allocation_method   = "Static"
  sku                 = "Standard"
  tags                = var.tags
}

resource "azurerm_bastion_host" "this" {
  name                = "bas-${var.prefix}"
  location            = var.location
  resource_group_name = var.resource_group_name
  sku                 = "Basic"

  ip_configuration {
    name                 = "bastion-ip-config"
    subnet_id            = azurerm_subnet.bastion.id
    public_ip_address_id = azurerm_public_ip.bastion.id
  }

  tags = var.tags
}
